--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "@angular/router": "^20.0.0",
     "@capacitor/android": "7.4.3",
     "@capacitor/app": "7.1.0",
+    "@capacitor/camera": "^7.0.4",
     "@capacitor/core": "7.4.3",
     "@capacitor/haptics": "7.0.2",
     "@capacitor/keyboard": "7.0.3",
     "@capacitor/status-bar": "7.0.3",
     "@ionic/angular": "^8.0.0",
+    "@ionic/pwa-elements": "^3.4.0",
     "@ionic/storage": "^4.0.0",
     "@ionic/storage-angular": "^4.0.0",
+    "capacitor": "^0.5.6",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
