--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "api": "json-server --watch db.json"
+    "api": "json-server --watch db.json --host 0.0.0.0"
   },
   "private": true,
   "dependencies": {
@@ -26,6 +26,7 @@
     "@capacitor/app": "7.1.0",
     "@capacitor/camera": "^7.0.4",
     "@capacitor/core": "7.4.3",
+    "@capacitor/geolocation": "^7.1.8",
     "@capacitor/haptics": "7.0.2",
     "@capacitor/keyboard": "7.0.3",
     "@capacitor/status-bar": "7.0.3",
@@ -54,6 +55,7 @@
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
+    "baseline-browser-mapping": "^2.10.0",
     "eslint": "^9.16.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsdoc": "^48.2.1",
