--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ionic/pwa-elements": "^3.4.0",
     "@ionic/storage": "^4.0.0",
     "@ionic/storage-angular": "^4.0.0",
+    "cap": "^0.2.1",
     "capacitor": "^0.5.6",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
